@@ -27,6 +27,7 @@ $ -> Language fix or change
 
 04-Aug-2013 Jean-Marie Simonet
  # [#31382] Added min-width to (bootstrap) radio buttons to prettify settings. Thanks Peter van Westen
+ # [#30027] Impossible to enter custom module position name if you have less than about 8 positions in the list. Thanks Sebastian Łuckoś
 
 03-Aug-2013 Jean-Marie Simonet
  # [#31297] Content language manager missing drag drop ordering. Thanks Nguyen Huu Hien
